[package]
name = "sqm-autorate-rust"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
codegen-units = 1
lto = true
opt-level = 's'

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"
strip = "symbols"


[dependencies]
anyhow = "1.0"
icmp-socket2 = "0.4.1"
netlink-bindings = { version = "0.2", features = ["rt-link", "tc"] }
netlink-socket2 = "0.2"
fastrand = "2"
rustix = { version = "1.1", features = ["fs", "thread", "time"] }
rust-uci = { version = "0.1", optional = true }
serde = { version = "1", default-features = false, features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
thiserror = "2.0"
libc = "0.2"
mlua = { version = "0.11.6", optional = true, features = ["lua51", "vendored", "send"] }
# net-vitals provides eBPF-based TCP RTT measurement (Phase C/D).
# Requires Linux 5.4+ with CONFIG_DEBUG_INFO_BTF=y and the eBPF Rust toolchain
# (nightly + bpf-linker + bpfel-unknown-none target).
net-vitals = { path = "../net-vitals/net-vitals", optional = true }

[dependencies.log]
features = ["std"]
version = "0.4"

[features]
default = []
uci = ["dep:rust-uci"]
lua = ["dep:mlua"]
# ebpf: TCP RTT measurement via eBPF TC classifier (Linux 5.4+ required)
ebpf = ["dep:net-vitals"]
