[package]
name = "sqm-autorate-rust"
version = "0.4.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
codegen-units = 1
lto = true
opt-level = 's'

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"
strip = "symbols"


[dependencies]
anyhow = "1.0"
icmp-socket2 = "0.4.2"
netlink-bindings = { git = "https://github.com/one-d-wide/netlink-bindings.git", rev = "3aee51e1a33b322fa2a2f706a9086941e14a008f", features = ["rt-link", "tc"] }
netlink-socket2 = { git = "https://github.com/one-d-wide/netlink-bindings.git", rev = "3aee51e1a33b322fa2a2f706a9086941e14a008f" }
fastrand = "2"
rustix = { version = "1.1", features = ["fs", "system", "thread", "time"] }
rust-uci = { git = "https://github.com/namib-project/rust-uci.git", rev = "71ea7864ae5d266100043bfd2f682d4302a5b3fc", optional = true }
thiserror = "2.0"
libc = "0.2"
flume = { version = "0.12.0",  default-features = false, features = ["eventual-fairness", "select"] }
hashlru = "0.11.1"

[dependencies.log]
features = ["std"]
version = "0.4"

[features]
uci = ["dep:rust-uci"]
